--- a/src/app/login-dialog/login-dialog-overview-dialog.html
+++ b/src/app/login-dialog/login-dialog-overview-dialog.html
@@ -1,6 +1,4 @@
-<h1 mat-dialog-title class="text-center">
-  Please SignUp or Login
-</h1>
+<h1 mat-dialog-title class="text-center">Please SignUp or Login</h1>
 <div class="text-center" *ngIf="isLoading">
   <app-login-spinner></app-login-spinner>
 </div>
