--- a/src/app/alert-dialog/dialog-overview-dialog.html
+++ b/src/app/alert-dialog/dialog-overview-dialog.html
@@ -2,6 +2,8 @@
 <div mat-dialog-content>
   <p>You are seccessfully passed the registration</p>
 </div>
-<div style="text-align: right;">
-  <button mat-button (click)="onNoClick()" style="color: coral; size: 23px">Ok</button>
+<div style="text-align: right">
+  <button mat-button (click)="onNoClick()" style="color: coral; size: 23px">
+    Ok
+  </button>
 </div>
