--- a/src/app/aquainted/aquainted.component.css
+++ b/src/app/aquainted/aquainted.component.css
@@ -1,73 +1,63 @@
-
-
-
-#man-mobile-img{
-  /*background-image: url("../../img/man-mobile.svg");*/
+#man-mobile-img {
   height: 284px;
   width: 289px;
   margin: auto;
   display: block;
 }
-#html-img{
-  /*background-image: url("../../img/html.svg");*/
+#html-img {
   height: 114px;
   width: 100px;
   margin: auto;
   display: block;
 }
-#css-img{
-  /*background-image: url("../../img/css.svg");*/
+#css-img {
   height: 114px;
   width: 100px;
   margin: auto;
   display: block;
 }
-#js-img{
-  /*background-image: url("../../img/javascript.svg");*/
+#js-img {
   height: 114px;
   width: 100px;
   margin: auto;
   display: block;
 }
 
-@media(max-width: 767px){
-  .text-tech-align{
+@media (max-width: 767px) {
+  .text-tech-align {
     text-align: center;
     margin: 0 auto;
   }
-  .main-text-align{
+  .main-text-align {
     text-align: center;
   }
-  .text-about-tech-width{
+  .text-about-tech-width {
     width: 250px;
   }
 }
 
-@media(min-width: 768px){
-  /*#man-mobile-img{*/
-    /*margin-top: 55px;*/
-  /*}*/
-  .main-text-align{
+@media (min-width: 768px) {
+  .main-text-align {
     text-align: left;
   }
-  .text-about-tech-width{/*ширина блока для текста про технологии*/
+  .text-about-tech-width {
+    /*ширина блока для текста про технологии*/
     width: 400px;
   }
-  .text-tech-align-together{/* выравнивание текста заголовка и текста про технологии */
+  .text-tech-align-together {
+    /* выравнивание текста заголовка и текста про технологии */
     text-align: left;
   }
 }
-@media(min-width: 992px){
-  .text-about-tech-width{
+@media (min-width: 992px) {
+  .text-about-tech-width {
     width: 250px;
   }
-  .text-tech-align{
+  .text-tech-align {
     text-align: center;
     margin: 0 auto;
   }
-  .text-tech-align-together{
+  .text-tech-align-together {
     text-align: center;
   }
-
 }
-
