--- a/src/app/cheerful-users/cheerful-users.component.html
+++ b/src/app/cheerful-users/cheerful-users.component.html
@@ -1,7 +1,5 @@
 <div class="container">
-  <!--<div class="row">-->
   <h2 class="text-center mt-5 mb-5">Our Cheerful Users</h2>
-  <!--</div>-->
 
   <div class="row">
     <!--start row-->
@@ -22,8 +20,8 @@
           <div class="user-data-frame">
             <h4 class="user-data-text">{{ user.name }}</h4>
             <p class="user-data-text">
-              {{ user.email }}<br>
-              {{ user.phone }}<br>
+              {{ user.email }}<br />
+              {{ user.phone }}<br />
               {{ user.position }}
             </p>
             <div class="text-center">
@@ -44,16 +42,6 @@
     <!--end of row-->
   </div>
 
-  <!-- <div class="container">
-    <div class="row">
-      <div style="margin: 0 auto;">
-        <button class="showmore-set-btn-style btn btn-default">
-          <b>Show more</b>
-        </button>
-      </div>
-    </div>
-  </div> -->
-
   <div class="row text-center">
     <h2 class="mt-5 col-12">Register to get a work</h2>
     <p class="mt-2 col-12">
@@ -66,7 +54,7 @@
 
 <div class="container">
   <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-    <div class="row ">
+    <div class="row">
       <div class="form-group col-sm-12 col-md-4 col-lg-4 col-xl-4">
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Your name</mat-label>
@@ -136,7 +124,7 @@
     </div>
 
     <div class="row mx-0">
-      <div class="form-group  col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-0 px-0">
+      <div class="form-group col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-0 px-0">
         <mat-form-field class="w-100" appearance="outline">
           <mat-label>Select your position</mat-label>
           <mat-select name="position" formControlName="position">
@@ -160,7 +148,12 @@
       </div>
 
       <div
-        class="form-group col-sm-12 col-md-6 col-lg-6 col-xl-6 pr-0 upload-field-padding"
+        class="
+          form-group
+          col-sm-12 col-md-6 col-lg-6 col-xl-6
+          pr-0
+          upload-field-padding
+        "
       >
         <div class="input-group-append">
           <mat-form-field appearance="outline" class="w-100">
@@ -215,8 +208,12 @@
       </div>
     </div>
     <div class="row">
-      <div style="margin: 0 auto;">
-        <button class="signup-set-btn-style btn btn-default" type="submit" [disabled]="!signupForm.valid">
+      <div style="margin: 0 auto">
+        <button
+          class="signup-set-btn-style btn btn-default"
+          type="submit"
+          [disabled]="!signupForm.valid"
+        >
           <b> Sign Up</b>
         </button>
         <app-alert-dialog-component></app-alert-dialog-component>
